--- a/output/templates/bsmain_mainmenu_horiz.htm
+++ b/output/templates/bsmain_mainmenu_horiz.htm
@@ -1,46 +1,62 @@
 <ul class="nav navbar-nav">
 {$active_submenu}
 	{BEGIN item1_menulink}
-	<li class="  {$item1_current}">
+	<li class="  dropdown  {$item1_current}">
 	<a {$item1_menulink_attrs}>{$item1_title}</a>
 
+			<ul class="dropdown-menu">
+			{BEGIN item2_menulink}
+			<li  class="  {$item2_current}">
+			<a {$item2_menulink_attrs}>{$item2_title}</a>
+
+			</li>
+			{END item2_menulink}
+					{BEGIN item3_menulink}
+			<li  class="  {$item3_current}">
+			<a {$item3_menulink_attrs}>{$item3_title}</a>
+
+			</li>
+			{END item3_menulink}
+					{BEGIN item4_menulink}
+			<li  class="  {$item4_current}">
+			<a {$item4_menulink_attrs}>{$item4_title}</a>
+
+			</li>
+			{END item4_menulink}
+			</ul>
 	</li>
 	{END item1_menulink}
-	{BEGIN item2_menulink}
-	<li class="  {$item2_current}">
-	<a {$item2_menulink_attrs}>{$item2_title}</a>
-
-	</li>
-	{END item2_menulink}
-	{BEGIN item3_menulink}
-	<li class="  {$item3_current}">
-	<a {$item3_menulink_attrs}>{$item3_title}</a>
-
-	</li>
-	{END item3_menulink}
-	{BEGIN item4_menulink}
-	<li class="  {$item4_current}">
-	<a {$item4_menulink_attrs}>{$item4_title}</a>
-
-	</li>
-	{END item4_menulink}
 	{BEGIN item5_menulink}
-	<li class="  {$item5_current}">
+	<li class="  dropdown  {$item5_current}">
 	<a {$item5_menulink_attrs}>{$item5_title}</a>
 
+			<ul class="dropdown-menu">
+			{BEGIN item6_menulink}
+			<li  class="  {$item6_current}">
+			<a {$item6_menulink_attrs}>{$item6_title}</a>
+
+			</li>
+			{END item6_menulink}
+					{BEGIN item7_menulink}
+			<li  class="  {$item7_current}">
+			<a {$item7_menulink_attrs}>{$item7_title}</a>
+
+			</li>
+			{END item7_menulink}
+					{BEGIN item8_menulink}
+			<li  class="  {$item8_current}">
+			<a {$item8_menulink_attrs}>{$item8_title}</a>
+
+			</li>
+			{END item8_menulink}
+					{BEGIN item9_menulink}
+			<li  class="  {$item9_current}">
+			<a {$item9_menulink_attrs}>{$item9_title}</a>
+
+			</li>
+			{END item9_menulink}
+			</ul>
 	</li>
 	{END item5_menulink}
-	{BEGIN item6_menulink}
-	<li class="  {$item6_current}">
-	<a {$item6_menulink_attrs}>{$item6_title}</a>
-
-	</li>
-	{END item6_menulink}
-	{BEGIN item7_menulink}
-	<li class="  {$item7_current}">
-	<a {$item7_menulink_attrs}>{$item7_title}</a>
-
-	</li>
-	{END item7_menulink}
 </ul>
 
