--- a/output/templates/main_mainmenu_quickjump.htm
+++ b/output/templates/main_mainmenu_quickjump.htm
@@ -33,3 +33,13 @@
 		{$item7_nbsps}{$item7_title}
 	</option>
 	{END item7_menulink}
+	{BEGIN item8_menulink}
+	<option {$item8_optionattrs} {BEGIN item8_current}selected{END item8_current}>
+		{$item8_nbsps}{$item8_title}
+	</option>
+	{END item8_menulink}
+	{BEGIN item9_menulink}
+	<option {$item9_optionattrs} {BEGIN item9_current}selected{END item9_current}>
+		{$item9_nbsps}{$item9_title}
+	</option>
+	{END item9_menulink}
