--- a/output/templates/projects_masterprint.htm
+++ b/output/templates/projects_masterprint.htm
@@ -27,6 +27,7 @@
 			<th class="{$project_start_date_class}">{$label projects project_start_date}</th>
 			<th class="{$project_end_dat_class}">{$label projects project_end_dat}</th>
 			<th class="{$project_attachments_class}">{$label projects project_attachments}</th>
+			<th class="{$project_timestamp_class}">{$label projects project_timestamp}</th>
 			<th class="rnr-edge">&nbsp;</th>
 		</tr>
 	</thead>
@@ -38,6 +39,7 @@
 			<td class="{$project_start_date_class}">{$project_start_date_mastervalue}</td>
 			<td class="{$project_end_dat_class}">{$project_end_dat_mastervalue}</td>
 			<td class="{$project_attachments_class}">{$project_attachments_mastervalue}</td>
+			<td class="{$project_timestamp_class}">{$project_timestamp_mastervalue}</td>
 			<td class="rnr-edge">&nbsp;</td>
 		</tr>
 	</tbody>
