--- a/output/templates/projects_view.htm
+++ b/output/templates/projects_view.htm
@@ -133,6 +133,18 @@
 	</div>
 </div>
 {END project_attachments_fieldblock}
+	{BEGIN project_timestamp_fieldblock}
+<div class="container">
+	<div class="{$fielddispclass_project_timestamp} bs-viewform-group" data-fieldname="project_timestamp">
+		<label class="bs-view-label col-md-4 text-right" for="{$labelfor_project_timestamp}">
+			{$label projects project_timestamp}
+		</label>
+		<div class="col-md-6 bs-horizontal-value" >
+			{$project_timestamp_value}&nbsp;
+		</div>
+	</div>
+</div>
+{END project_timestamp_fieldblock}
 </div>
 
 
