--- a/output/templates/events_detailspreview.htm
+++ b/output/templates/events_detailspreview.htm
@@ -22,6 +22,8 @@
 {BEGIN details_row_header}
 	<thead>
 		<tr class="{$gridHeader_class}" >
+			<th class="{$event_task_class}">{$label events event_task}</th>
+			<th class="{$event_timestamp_class}">{$label events event_timestamp}</th>
 			<th class="{$event_project_class}">{$label events event_project}</th>
 			<th class="{$event_add_date_class}">{$label events event_add_date}</th>
 			<th class="{$event_subject_class}">{$label events event_subject}</th>
@@ -33,6 +35,8 @@
 	<tbody>
 {BEGIN details_row}
 		<tr>
+			<td class="{$event_task_class}">{$event_task_value}</td>
+			<td class="{$event_timestamp_class}">{$event_timestamp_value}</td>
 			<td class="{$event_project_class}">{$event_project_value}</td>
 			<td class="{$event_add_date_class}">{$event_add_date_value}</td>
 			<td class="{$event_subject_class}">{$event_subject_value}</td>
