--- a/output/templates/events_view.htm
+++ b/output/templates/events_view.htm
@@ -61,6 +61,30 @@
 
 
 <div {$viewfields_hiddenattr} data-pageid="{$pageid}" data-brick="viewfields" >
+	{BEGIN event_timestamp_fieldblock}
+<div class="container">
+	<div class="{$fielddispclass_event_timestamp} bs-viewform-group" data-fieldname="event_timestamp">
+		<label class="bs-view-label col-md-4 text-right" for="{$labelfor_event_timestamp}">
+			{$label events event_timestamp}
+		</label>
+		<div class="col-md-6 bs-horizontal-value" >
+			{$event_timestamp_value}&nbsp;
+		</div>
+	</div>
+</div>
+{END event_timestamp_fieldblock}
+	{BEGIN event_task_fieldblock}
+<div class="container">
+	<div class="{$fielddispclass_event_task} bs-viewform-group" data-fieldname="event_task">
+		<label class="bs-view-label col-md-4 text-right" for="{$labelfor_event_task}">
+			{$label events event_task}
+		</label>
+		<div class="col-md-6 bs-horizontal-value" >
+			{$event_task_value}&nbsp;
+		</div>
+	</div>
+</div>
+{END event_task_fieldblock}
 	{BEGIN event_project_fieldblock}
 <div class="container">
 	<div class="{$fielddispclass_event_project} bs-viewform-group" data-fieldname="event_project">
