--- a/output/templates/main_mainmenu_horiz.htm
+++ b/output/templates/main_mainmenu_horiz.htm
@@ -1,65 +1,108 @@
 	{BEGIN item1_menulink}
-	<div id="item1" class="rnr-b-hmenu {$menustyle} Leaf {$item1_current}">
+	<div id="item1" class="rnr-b-hmenu {$menustyle} Group {$item1_current}">
 	<span class="rnr-hseparator"></span><div>
 <a {$item1_menulink_attrs}>{$item1_title}</a></div>
 
 
 
+			<ul >
+			{BEGIN item2_menulink}
+			<li  parent="group1" class="Leaf {$item2_current} menuLeaf">
+			<div>
+<div>
+<a {$item2_menulink_attrs}>{$item2_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item2_menulink}
+					{BEGIN item3_menulink}
+			<li  parent="group1" class="Leaf {$item3_current} menuLeaf">
+			<div>
+<div>
+<a {$item3_menulink_attrs}>{$item3_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item3_menulink}
+					{BEGIN item4_menulink}
+			<li  parent="group1" class="Leaf {$item4_current} menuLeaf">
+			<div>
+<div>
+<a {$item4_menulink_attrs}>{$item4_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item4_menulink}
+			</ul>
 	</div>
 	{END item1_menulink}
-	{BEGIN item2_menulink}
-	<div id="item2" class="rnr-b-hmenu {$menustyle} Leaf {$item2_current}">
-	<span class="rnr-hseparator"></span><div>
-<a {$item2_menulink_attrs}>{$item2_title}</a></div>
-
-
-
-	</div>
-	{END item2_menulink}
-	{BEGIN item3_menulink}
-	<div id="item3" class="rnr-b-hmenu {$menustyle} Leaf {$item3_current}">
-	<span class="rnr-hseparator"></span><div>
-<a {$item3_menulink_attrs}>{$item3_title}</a></div>
-
-
-
-	</div>
-	{END item3_menulink}
-	{BEGIN item4_menulink}
-	<div id="item4" class="rnr-b-hmenu {$menustyle} Leaf {$item4_current}">
-	<span class="rnr-hseparator"></span><div>
-<a {$item4_menulink_attrs}>{$item4_title}</a></div>
-
-
-
-	</div>
-	{END item4_menulink}
 	{BEGIN item5_menulink}
-	<div id="item5" class="rnr-b-hmenu {$menustyle} Leaf {$item5_current}">
+	<div id="item5" class="rnr-b-hmenu {$menustyle} Group {$item5_current}">
 	<span class="rnr-hseparator"></span><div>
 <a {$item5_menulink_attrs}>{$item5_title}</a></div>
 
 
 
+			<ul >
+			{BEGIN item6_menulink}
+			<li  parent="group5" class="Leaf {$item6_current} menuLeaf">
+			<div>
+<div>
+<a {$item6_menulink_attrs}>{$item6_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item6_menulink}
+					{BEGIN item7_menulink}
+			<li  parent="group5" class="Leaf {$item7_current} menuLeaf">
+			<div>
+<div>
+<a {$item7_menulink_attrs}>{$item7_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item7_menulink}
+					{BEGIN item8_menulink}
+			<li  parent="group5" class="Leaf {$item8_current} menuLeaf">
+			<div>
+<div>
+<a {$item8_menulink_attrs}>{$item8_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item8_menulink}
+					{BEGIN item9_menulink}
+			<li  parent="group5" class="Leaf {$item9_current} menuLeaf">
+			<div>
+<div>
+<a {$item9_menulink_attrs}>{$item9_title}</a>
+</div>
+</div>
+
+
+
+			</li>
+			{END item9_menulink}
+			</ul>
 	</div>
 	{END item5_menulink}
-	{BEGIN item6_menulink}
-	<div id="item6" class="rnr-b-hmenu {$menustyle} Leaf {$item6_current}">
-	<span class="rnr-hseparator"></span><div>
-<a {$item6_menulink_attrs}>{$item6_title}</a></div>
-
-
-
-	</div>
-	{END item6_menulink}
-	{BEGIN item7_menulink}
-	<div id="item7" class="rnr-b-hmenu {$menustyle} Leaf {$item7_current}">
-	<span class="rnr-hseparator"></span><div>
-<a {$item7_menulink_attrs}>{$item7_title}</a></div>
-
-
-
-	</div>
-	{END item7_menulink}
 
 
