--- a/output/templates/oldmain_mainmenu_horiz.htm
+++ b/output/templates/oldmain_mainmenu_horiz.htm
@@ -3,7 +3,7 @@
 	<tr>
 {BEGIN simpleTypeMenu}
 	{BEGIN item1_menulink}
-	<td id="item1" view="topitem" class="Leaf">
+	<td id="item1" view="topitem" class="Group">
 	<table cellpadding="0">
 	<tr class="runner-menutab{BEGIN item1_current} current{END item1_current}">
 		<td class="runner-cl"><img src="images/spacer.gif"></td>
@@ -14,52 +14,33 @@
 	</tr>
 </table>	
 
+			<ul id="group1">
+			{BEGIN item2_menulink}
+			<li id="item2" parent="group1" class="Leaf{BEGIN item2_current} current{END item2_current}">
+			&nbsp;<a {$item2_menulink_attrs} {BEGIN item2_current}class="curlink"{END item2_current}>{$item2_title}</a>&nbsp;
+
+
+			</li>
+			{END item2_menulink}
+					{BEGIN item3_menulink}
+			<li id="item3" parent="group1" class="Leaf{BEGIN item3_current} current{END item3_current}">
+			&nbsp;<a {$item3_menulink_attrs} {BEGIN item3_current}class="curlink"{END item3_current}>{$item3_title}</a>&nbsp;
+
+
+			</li>
+			{END item3_menulink}
+					{BEGIN item4_menulink}
+			<li id="item4" parent="group1" class="Leaf{BEGIN item4_current} current{END item4_current}">
+			&nbsp;<a {$item4_menulink_attrs} {BEGIN item4_current}class="curlink"{END item4_current}>{$item4_title}</a>&nbsp;
+
+
+			</li>
+			{END item4_menulink}
+			</ul>
 	</td>
 	{END item1_menulink}
-	{BEGIN item2_menulink}
-	<td id="item2" view="topitem" class="Leaf">
-	<table cellpadding="0">
-	<tr class="runner-menutab{BEGIN item2_current} current{END item2_current}">
-		<td class="runner-cl"><img src="images/spacer.gif"></td>
-		<td class="runner-cc">	
-			<a {$item2_menulink_attrs} {BEGIN item2_current}class="curlink"{END item2_current}>{$item2_title}</a>
-		</td>
-		<td class="runner-cr"><img src="images/spacer.gif"></td>
-	</tr>
-</table>	
-
-	</td>
-	{END item2_menulink}
-	{BEGIN item3_menulink}
-	<td id="item3" view="topitem" class="Leaf">
-	<table cellpadding="0">
-	<tr class="runner-menutab{BEGIN item3_current} current{END item3_current}">
-		<td class="runner-cl"><img src="images/spacer.gif"></td>
-		<td class="runner-cc">	
-			<a {$item3_menulink_attrs} {BEGIN item3_current}class="curlink"{END item3_current}>{$item3_title}</a>
-		</td>
-		<td class="runner-cr"><img src="images/spacer.gif"></td>
-	</tr>
-</table>	
-
-	</td>
-	{END item3_menulink}
-	{BEGIN item4_menulink}
-	<td id="item4" view="topitem" class="Leaf">
-	<table cellpadding="0">
-	<tr class="runner-menutab{BEGIN item4_current} current{END item4_current}">
-		<td class="runner-cl"><img src="images/spacer.gif"></td>
-		<td class="runner-cc">	
-			<a {$item4_menulink_attrs} {BEGIN item4_current}class="curlink"{END item4_current}>{$item4_title}</a>
-		</td>
-		<td class="runner-cr"><img src="images/spacer.gif"></td>
-	</tr>
-</table>	
-
-	</td>
-	{END item4_menulink}
 	{BEGIN item5_menulink}
-	<td id="item5" view="topitem" class="Leaf">
+	<td id="item5" view="topitem" class="Group">
 	<table cellpadding="0">
 	<tr class="runner-menutab{BEGIN item5_current} current{END item5_current}">
 		<td class="runner-cl"><img src="images/spacer.gif"></td>
@@ -70,36 +51,38 @@
 	</tr>
 </table>	
 
+			<ul id="group5">
+			{BEGIN item6_menulink}
+			<li id="item6" parent="group5" class="Leaf{BEGIN item6_current} current{END item6_current}">
+			&nbsp;<a {$item6_menulink_attrs} {BEGIN item6_current}class="curlink"{END item6_current}>{$item6_title}</a>&nbsp;
+
+
+			</li>
+			{END item6_menulink}
+					{BEGIN item7_menulink}
+			<li id="item7" parent="group5" class="Leaf{BEGIN item7_current} current{END item7_current}">
+			&nbsp;<a {$item7_menulink_attrs} {BEGIN item7_current}class="curlink"{END item7_current}>{$item7_title}</a>&nbsp;
+
+
+			</li>
+			{END item7_menulink}
+					{BEGIN item8_menulink}
+			<li id="item8" parent="group5" class="Leaf{BEGIN item8_current} current{END item8_current}">
+			&nbsp;<a {$item8_menulink_attrs} {BEGIN item8_current}class="curlink"{END item8_current}>{$item8_title}</a>&nbsp;
+
+
+			</li>
+			{END item8_menulink}
+					{BEGIN item9_menulink}
+			<li id="item9" parent="group5" class="Leaf{BEGIN item9_current} current{END item9_current}">
+			&nbsp;<a {$item9_menulink_attrs} {BEGIN item9_current}class="curlink"{END item9_current}>{$item9_title}</a>&nbsp;
+
+
+			</li>
+			{END item9_menulink}
+			</ul>
 	</td>
 	{END item5_menulink}
-	{BEGIN item6_menulink}
-	<td id="item6" view="topitem" class="Leaf">
-	<table cellpadding="0">
-	<tr class="runner-menutab{BEGIN item6_current} current{END item6_current}">
-		<td class="runner-cl"><img src="images/spacer.gif"></td>
-		<td class="runner-cc">	
-			<a {$item6_menulink_attrs} {BEGIN item6_current}class="curlink"{END item6_current}>{$item6_title}</a>
-		</td>
-		<td class="runner-cr"><img src="images/spacer.gif"></td>
-	</tr>
-</table>	
-
-	</td>
-	{END item6_menulink}
-	{BEGIN item7_menulink}
-	<td id="item7" view="topitem" class="Leaf">
-	<table cellpadding="0">
-	<tr class="runner-menutab{BEGIN item7_current} current{END item7_current}">
-		<td class="runner-cl"><img src="images/spacer.gif"></td>
-		<td class="runner-cc">	
-			<a {$item7_menulink_attrs} {BEGIN item7_current}class="curlink"{END item7_current}>{$item7_title}</a>
-		</td>
-		<td class="runner-cr"><img src="images/spacer.gif"></td>
-	</tr>
-</table>	
-
-	</td>
-	{END item7_menulink}
 	{BEGIN adminarea_link}
 	<td id="itemAA" view="topitem" class="Leaf">
 	<table class="runner-c" cellpadding="0">
