--- a/output/templates/projects_edit.htm
+++ b/output/templates/projects_edit.htm
@@ -206,6 +206,24 @@
 </div>
 {END project_attachments_fieldblock}
 
+			{BEGIN project_timestamp_fieldblock}
+<div class=container>
+<div class="form-group" data-fieldname="project_timestamp" data-signal-error-for="project_timestamp{$id}" >
+	<label class="col-md-3 control-label" for="{$labelfor_project_timestamp}">
+		{BEGIN project_timestamp_label}{$label projects project_timestamp}{END project_timestamp_label}
+	</label>
+	<div class="col-md-6" >
+		{$project_timestamp_editcontrol}
+	</div>
+	<div class="col-md-3 help-block" data-helpfor="project_timestamp">
+		<div class="text-muted" >
+		{$tooltip projects project_timestamp}
+		</div>
+	</div>
+</div>
+</div>
+{END project_timestamp_fieldblock}
+
 
 </div>
 
