--- a/output/templates/tasks_detailspreview.htm
+++ b/output/templates/tasks_detailspreview.htm
@@ -22,6 +22,9 @@
 {BEGIN details_row_header}
 	<thead>
 		<tr class="{$gridHeader_class}" >
+			<th class="{$task_timestamp_class}">{$label tasks task_timestamp}</th>
+			<th class="{$task_done_class}">{$label tasks task_done}</th>
+			<th class="{$task_completed_class}">{$label tasks task_completed}</th>
 			<th class="{$task_project_class}">{$label tasks task_project}</th>
 			<th class="{$task_modify_date_class}">{$label tasks task_modify_date}</th>
 			<th class="{$task_subject_class}">{$label tasks task_subject}</th>
@@ -36,6 +39,9 @@
 	<tbody>
 {BEGIN details_row}
 		<tr>
+			<td class="{$task_timestamp_class}">{$task_timestamp_value}</td>
+			<td class="{$task_done_class}">{$task_done_value}</td>
+			<td class="{$task_completed_class}">{$task_completed_value}</td>
 			<td class="{$task_project_class}">{$task_project_value}</td>
 			<td class="{$task_modify_date_class}">{$task_modify_date_value}</td>
 			<td class="{$task_subject_class}">{$task_subject_value}</td>
